Add more config layering and check on Free edition

--- a/src/3_train.ipynb
+++ b/src/3_train.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6fd6badf-da78-4a15-a4ef-2af7303fe1dc",
      "showTitle": false,
@@ -80,7 +83,7 @@
    "source": [
     "from well_agent.utils import get_config_path, DotConfig\n",
     "config_path = get_config_path()\n",
-    "config = DotConfig(config_path)"
+    "config = DotConfig('config.yaml')"
    ]
   },
   {
@@ -111,7 +114,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f0c21234-8749-47c3-95c9-6c59e427323e",
      "showTitle": false,
@@ -141,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.table(f\"{config.catalog}.{config.schema}.well_data_c\")\n",
+    "df = spark.table(f\"{config.catalog}.{config.schema}.{config.process.table}\")\n",
     "\n",
     "ml_df = (df\n",
     "  .filter(df.well_number.isin([19, 29, 31, 28, 25]))\n",
@@ -386,25 +392,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c258ba49-306b-4457-aa59-33c7a421d406",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "917f3c26-5ec8-4b94-9b70-408d755c2b09",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -455,35 +442,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "e2436b0b-9e06-4dad-9511-b222f147e396",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sample_results = pd.DataFrame({\n",
-    "    'actual': y_test.iloc[:10],\n",
-    "    'predicted': y_pred[:10],\n",
-    "    'actual_name': y_test.iloc[:10].state.map(state_names),\n",
-    "    'predicted_name': pd.Series(y_pred[:10]).map(state_names),\n",
-    "    'max_probability': np.max(y_pred_proba[:10], axis=1)\n",
-    "})\n",
-    "print(sample_results)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c0aeaa95-c314-470f-aed3-776c603c9c0e",
      "showTitle": false,
@@ -518,7 +483,7 @@
     "    lgb_model=lgb_model,\n",
     "    artifact_path=\"model\",\n",
     "    input_example=input_example,\n",
-    "    registered_model_name=\"shm.3w.lightgbm\"\n",
+    "    registered_model_name=f\"{config.catalog}.{config.schema}.{config.train.base_model_name}\"\n",
     ")"
    ]
   },
@@ -608,27 +573,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a3753efd-c444-4d27-a8b3-e60b6954e0f8",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "serving_example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "dfd3ee29-9dde-4aac-8817-cacfbf328498",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -657,12 +601,12 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8154626112669173,
+     "commandId": 4935179874072805,
      "dataframes": [
       "_sqldf"
      ]
     },
-    "pythonIndentUnit": 2
+    "pythonIndentUnit": 4
    },
    "notebookName": "3_train",
    "widgets": {}
