--- a/src/5_agentify.ipynb
+++ b/src/5_agentify.ipynb
@@ -87,8 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e28f7d56-0a40-45fa-b518-4e564ff10988",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from well_agent.utils import get_config_path, DotConfig\n",
+    "config_path = get_config_path()\n",
+    "config = DotConfig('config.yaml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "804f0790-35cd-4d5c-9f73-4a513b465fbb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from databricks.connect import DatabricksSession as SparkSession\n",
@@ -210,7 +245,7 @@
    "outputs": [],
    "source": [
     "import mlflow\n",
-    "from agent import LLM_ENDPOINT_NAME, tools\n",
+    "from agent import llm_endpoint_name, tools\n",
     "from databricks_langchain import VectorSearchRetrieverTool\n",
     "from mlflow.models.resources import DatabricksFunction, DatabricksServingEndpoint\n",
     "from pkg_resources import get_distribution\n",
@@ -221,8 +256,8 @@
     "uc_model_name = f\"{config.catalog}.{config.schema}.{config.agentify.agent_name}\"\n",
     "\n",
     "resources = [\n",
-    "    DatabricksServingEndpoint(endpoint_name=LLM_ENDPOINT_NAME),\n",
-    "    DatabricksServingEndpoint(endpoint_name='shm_3w_lightgbm')\n",
+    "    DatabricksServingEndpoint(endpoint_name=llm_endpoint_name),\n",
+    "    DatabricksServingEndpoint(endpoint_name=config.deploy.base_hydrate_deploy_name)\n",
     "    ]\n",
     "for tool in tools:\n",
     "    if isinstance(tool, VectorSearchRetrieverTool):\n",
@@ -243,6 +278,7 @@
     "    logged_agent_info = mlflow.pyfunc.log_model(\n",
     "        name=\"agent\",\n",
     "        python_model=\"agent.py\",\n",
+    "        model_config='config.yaml',\n",
     "        input_example=input_example,\n",
     "        resources=resources,\n",
     "        registered_model_name=uc_model_name,\n",
@@ -279,9 +315,26 @@
     "agents.deploy(\n",
     "  uc_model_name, \n",
     "  logged_agent_info.registered_model_version, \n",
-    "  tags={\"endpointSource\": \"playground\"}\n",
+    "  tags={\"endpointSource\": \"playground\"},\n",
+    "  scale_to_zero=True\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4347782a-9450-4788-9e05-200b098caa4b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -302,12 +355,12 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8154626112669518,
+     "commandId": 4935179874072845,
      "dataframes": [
       "_sqldf"
      ]
     },
-    "pythonIndentUnit": 2
+    "pythonIndentUnit": 4
    },
    "notebookName": "5_agentify",
    "widgets": {}
