--- a/src/6_evaluation.ipynb
+++ b/src/6_evaluation.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "bfe75319-a77d-469c-a296-e03731d4fd17",
      "showTitle": false,
@@ -61,10 +64,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d83c446e-8574-42a3-89c6-dfd6d7f2ccb2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from well_agent.utils import get_config_path, DotConfig\n",
+    "config_path = get_config_path()\n",
+    "config = DotConfig('config.yaml')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4a877ab5-8cf7-4444-833a-b17a2740c9e1",
      "showTitle": false,
@@ -101,14 +130,6 @@
    },
    "outputs": [],
    "source": [
-    "questions = [\n",
-    "    \"What are the latest predictions?\",\n",
-    "    \"What is the current state of Well 19?\",\n",
-    "    \"What is the current state of Well 1023?\",\n",
-    "    \"What wells are currently operating?\",\n",
-    "    \"Tell me everything you know about Well 19?\",\n",
-    "]\n",
-    "\n",
     "eval_dataset = [\n",
     "    {\n",
     "        \"inputs\": {\n",
@@ -117,7 +138,7 @@
     "            ]\n",
     "        }\n",
     "    }\n",
-    "    for question in questions\n",
+    "    for question in config.evaluate.questions\n",
     "]\n",
     "\n",
     "input_example = eval_dataset[0]['inputs']"
@@ -145,6 +166,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d55f2d86-1e54-4db9-a3bc-f1089dc9c731",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "This is the most common pattern for calling agents from an application - direct API interfaces, facilitated via the mlflow deployment client (this could also be done via the requests package)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -165,9 +202,11 @@
     "from mlflow.deployments import get_deploy_client\n",
     "\n",
     "response = get_deploy_client(\"databricks\").predict(\n",
-    "    endpoint=\"agents_shm-3w-well_agent\", \n",
+    "    endpoint=f\"agents_{config.catalog}-{config.schema}-{config.agentify.agent_name}\", \n",
     "    inputs=input_example\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "response"
    ]
   },
   {
@@ -223,7 +262,7 @@
     "def sample_app(messages: list[dict[str, str]]):\n",
     "    print(messages)\n",
     "    response = get_deploy_client(\"databricks\").predict(\n",
-    "        endpoint=\"agents_shm-3w-well_agent\", \n",
+    "        endpoint=f\"agents_{config.catalog}-{config.schema}-{config.agentify.agent_name}\", \n",
     "        inputs={'messages':messages}\n",
     "    )\n",
     "    return response"
@@ -233,7 +272,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1e568190-0f3e-40b3-8476-8a89eedab2ab",
      "showTitle": false,
@@ -281,7 +323,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "716a26a1-505e-4ecf-b7cc-3937d1898356",
      "showTitle": false,
@@ -322,7 +367,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4e59784a-0775-49a6-81b6-3bc9d31f2c47",
      "showTitle": false,
@@ -406,7 +454,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "42584023-c147-42b4-89f0-c8e630fceee7",
      "showTitle": false,
@@ -469,7 +520,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6dcd4305-8dfb-420d-9c3c-1410aa309f00",
      "showTitle": false,
@@ -556,12 +610,12 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8154626112668942,
+     "commandId": 7692790942574644,
      "dataframes": [
       "_sqldf"
      ]
     },
-    "pythonIndentUnit": 2
+    "pythonIndentUnit": 4
    },
    "notebookName": "6_evaluation",
    "widgets": {}
